SDKs/traccar.org/4.14/java/README.md
# openapisdk

<!-- Start SDK Installation -->
## SDK Installation

### Gradle

```groovy
implementation 'openapisdk:openapisdk:0.0.1'
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```java
package hello.world;

import openapisdk.SDK;
import openapisdk.models.shared.Security;

public class Application {
    public static void main(String[] args) {
        try {
            SDK.Builder builder = SDK.builder();

            builder.setSecurity(
                new Security() {{
                    basicAuth = new SchemeBasicAuth() {{
                        password = "YOUR_PASSWORD_HERE";
                        username = "YOUR_USERNAME_HERE";
                    }};
                }}
            );

            SDK sdk = builder.build();

            DeleteAttributesComputedIdRequest req = new DeleteAttributesComputedIdRequest() {{
                pathParams = new DeleteAttributesComputedIdPathParams() {{
                    id = 2350280920086746644;
                }};
            }};

            DeleteAttributesComputedIdResponse res = sdk.attributes.deleteAttributesComputedId(req);

            if (res.statusCode == 200) {
                // handle response
            }
        } catch (Exception e) {
            // handle exception
        }
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### Attributes

* `deleteAttributesComputedId` - Delete an Attribute
* `getAttributesComputed` - Fetch a list of Attributes
* `postAttributesComputed` - Create an Attribute
* `putAttributesComputedId` - Update an Attribute

### Calendars

* `deleteCalendarsId` - Delete a Calendar
* `getCalendars` - Fetch a list of Calendars
* `postCalendars` - Create a Calendar
* `putCalendarsId` - Update a Calendar

### Commands

* `deleteCommandsId` - Delete a Saved Command
* `getCommands` - Fetch a list of Saved Commands
* `getCommandsSend` - Fetch a list of Saved Commands supported by Device at the moment
* `getCommandsTypes` - Fetch a list of available Commands for the Device or all possible Commands if Device ommited
* `postCommands` - Create a Saved Command
* `postCommandsSend` - Dispatch commands to device
* `putCommandsId` - Update a Saved Command

### Devices

* `deleteDevicesId` - Delete a Device
* `getDevices` - Fetch a list of Devices
* `postDevices` - Create a Device
* `putDevicesId` - Update a Device
* `putDevicesIdAccumulators` - Update total distance and hours of the Device

### Drivers

* `deleteDriversId` - Delete a Driver
* `getDrivers` - Fetch a list of Drivers
* `postDrivers` - Create a Driver
* `putDriversId` - Update a Driver

### Events

* `getEventsId`

### Geofences

* `deleteGeofencesId` - Delete a Geofence
* `getGeofences` - Fetch a list of Geofences
* `postGeofences` - Create a Geofence
* `putGeofencesId` - Update a Geofence

### Groups

* `deleteGroupsId` - Delete a Group
* `getGroups` - Fetch a list of Groups
* `postGroups` - Create a Group
* `putGroupsId` - Update a Group

### Maintenance

* `deleteMaintenanceId` - Delete a Maintenance
* `getMaintenance` - Fetch a list of Maintenance
* `postMaintenance` - Create a Maintenance
* `putMaintenanceId` - Update a Maintenance

### Notifications

* `deleteNotificationsId` - Delete a Notification
* `getNotifications` - Fetch a list of Notifications
* `getNotificationsTypes` - Fetch a list of available Notification types
* `postNotifications` - Create a Notification
* `postNotificationsTest` - Send test notification to current user via Email and SMS
* `putNotificationsId` - Update a Notification

### Permissions

* `deletePermissions` - Unlink an Object from another Object
* `postPermissions` - Link an Object to another Object

### Positions

* `getPositions` - Fetches a list of Positions

### Reports

* `getReportsEvents` - Fetch a list of Events within the time period for the Devices or Groups
* `getReportsRoute` - Fetch a list of Positions within the time period for the Devices or Groups
* `getReportsStops` - Fetch a list of ReportStops within the time period for the Devices or Groups
* `getReportsSummary` - Fetch a list of ReportSummary within the time period for the Devices or Groups
* `getReportsTrips` - Fetch a list of ReportTrips within the time period for the Devices or Groups

### Server

* `getServer` - Fetch Server information
* `putServer` - Update Server information

### Session

* `deleteSession` - Close the Session
* `getSession` - Fetch Session information
* `postSession` - Create a new Session

### Statistics

* `getStatistics` - Fetch server Statistics

### Users

* `deleteUsersId` - Delete a User
* `getUsers` - Fetch a list of Users
* `postUsers` - Create a User
* `putUsersId` - Update a User

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
